Deque Analysis Color Contrast fixes

--- a/src/styles/_custom_variables.scss
+++ b/src/styles/_custom_variables.scss
@@ -32,7 +32,7 @@
   --ds-expandable-navbar-bg: var(--ds-navbar-bg);
   --ds-expandable-navbar-link-color: var(--ds-navbar-link-color);
   --ds-expandable-navbar-link-color-hover: var(--ds-navbar-link-color-hover);
-
+  
   $admin-sidebar-bg: darken(#2B4E72, 17%);
   $admin-sidebar-active-bg: darken($admin-sidebar-bg, 3%);
   --ds-admin-sidebar-bg: #{$admin-sidebar-bg};
@@ -61,7 +61,20 @@
   --ds-notification-bg-danger: #{darken(adjust-hue($danger, -10), 10%)};
   --ds-notification-bg-info: #{darken(adjust-hue($info, -10), 10%)};
   --ds-notification-bg-warning: #{darken(adjust-hue($warning, -10), 10%)};
-
+	--ds-notification-success-color: #307B23;
+  --ds-notification-danger-color: #9a6e6e;
+  --ds-text-warning-color: #cf822c;
+  --ds-text-success-color: #74a030;
+  --ds-range-filter-border-color: #949494;
+  --ds-range-filter-connect-color: #63852e;
+	
+	--ds-badge-archived-background-color: #2a701e;
+	--ds-badge-archived-color: #000;
+	--ds-button-success-background-color: #358726;
+	--ds-button-success-background-hover-color: #{darken(#358726, 10%)};
+	--ds-button-warning-background-color: #{darken($yellow, 20%)};
+	--ds-button-warning-background-hover-color: #{darken($yellow, 30%)};
+	
   --ds-fa-fixed-width: #{$fa-fixed-width};
   --ds-icon-padding: #{$icon-padding};
   --ds-collapsed-sidebar-width: #{$collapsed-sidebar-width};
@@ -81,7 +94,7 @@
   --ds-home-news-background-color: #{$gray-200};
 
   --ds-breadcrumb-bg: #{$gray-200} !important;
-  --ds-breadcrumb-link-color: #{$cyan};
+  --ds-breadcrumb-link-color: #{darken($cyan, 10%)};
   --ds-breadcrumb-link-active-color: #{darken($cyan, 30%)};
   --ds-breadcrumb-max-length: 200px;
 
